assets/css/style.css
/* ... */
hr {
  border-top: 1px solid #888e8e;
  width: auto;
  margin-top: 2%;
}
#logo {
  float: left;
}
#logo img {
  border: none;
  margin-top: 10px;
  width: 60%;
}

/*navigation links*/
#menu-bar {
  font-weight: bold;
  padding: 35px;
  margin-bottom: -25px;
}
#menu-bar a {
  text-decoration: none;
}
#menu-bar li:hover {
  transform: scale(1.1);
}
#menu-bar li {
  list-style-type: none;
}
.active {
  border-bottom: none;
}
/*hero image*/
#hero-image {
  background-image: url(../images/hero-image.jpeg);
  background-repeat: no-repeat;
  background-size: cover;
}

.welcome {
  font-family: "Nunito", sans-serif;
  text-align: center;
  color: #4a4a4a;
  font-weight: bold;
  margin: 4% 2% 4% 2%;
  font-size: larger;
  box-sizing: content-box;
  border: 1px solid #888e8e;
  border-radius: 10px;
  padding: 2%;
  letter-spacing: 0.5px;
}

#circle img {
  width: 350px;
  height: 350px;
  overflow: hidden;
  border-radius: 50%;
  margin-left: 80px;
}

/*book collection*/
#castle {
  background-image: url(../images/castle.jpeg);
  background-repeat: no-repeat;
  /* height: 500px;
  background-position: center;
  background-repeat: no-repeat;
  background-size: cover;
  position: relative; */
}
/* #summary {
  font-size: inherit;
  font-family: inherit;
  margin-top: 5%;
  margin-left: 5%;
  margin-right: 5%;
  margin-bottom: 5%;
  text-align: center;
} */

.summary p {
  width: 80%;
  font-weight: 700;
}

#early-work {
  font-family: "Nunito", sans-serif;
  
}
.row2 {
  display: block;
  flex-wrap: wrap;
  opacity: 0.83;
}
.column2 img {
  display: flex;
  justify-content: center;
  width: 620px;
  padding: 0 0 0 15px;
  margin: 20px 0;
  width: 60%;
  margin-left: 20%;
}

#list p {
  font-size: 24px;
  width: auto;
}
/*meetup section styling*/
.meetup-section {
  clear: left;
  background-size: cover;
  background-position: center;
  text-align: center;
}
.book-club {
  background-image: url(../images/dragonbooks.jpeg);
  height: 500px;
  background-position: center;
  background-repeat: no-repeat;
  background-size: 100%;
  position: relative;
  object-fit: fill;
}
.email {
  text-align: center;
  padding: 2%;
  margin: 2px;
  font-size: 25px;
}
input[type="submit"] {
  margin-top: 20px;
  margin-left: 1rem;
  padding: 8px;
  background-color: #719b43;
  color: white;
  border: none;
  border-radius: 7px;
  font-size: 40px;
}
#email-field {
  border: solid 1px #719b43;
  border-radius: 5px;
  height: 30px;
  text-align: left;
}
form > p {
  margin: 40px;
  color: #4a4a4a;
  font-size: 24px;
  box-sizing: content-box;
  border: 1px solid #888e8e;
  border-radius: 10px;
  padding: 2%;
}
form > h2 {
  margin-top: 5%;
}
/* meetup times*/
.meetup-times {
  box-sizing: content-box;
  border: 1px solid green;
  border-radius: 5px;
  padding: 10px;
  width: 500px;
  margin-left: 32.5%;
  margin-bottom: 35px;
}
.map {
  margin-left: 50px;
  width: 100%;
}
/*form dump styles*/
#thanks {
  background-image: url(../images/thanks.jpeg);
  height: 600px;
  width: 100%;
  background-position: center;
  background-repeat: no-repeat;
  background-size: contain;
  background-blend-mode: darken;
}
/*media queries*/
/* For large screens sizes from 3840px wide and down */
@media screen and (max-width: 3840px) {
  #menu-bar {
    display: flex;
    flex-direction: row-reverse;
    float: right;
    line-height: 30px;
    font-size: 35px;
    position: absolute;
    left: 65%;
    top: -1%;
    right: 0.2%;
  }
  hr {
    margin-top: 3%;
    margin-bottom: 1%;
    width: auto;
    margin-left: 1rem;
  }
  .welcome {
    font-size: 25px;
  }
  .biography {
    padding: 30px 0;
    margin: 0;
  }
  .row img {
    max-width: 100%;
    height: 850px;
    display: block;
  }
  .column2 img {
    width: 75%;
    height: auto;
    margin-left: 11%;
  }
  div iframe {
    width: 100%;
    margin-left: 10%;
  }
  #logo {
    max-width: 50%;
    margin-top: -1%;
    font-size: 80px;
    margin-bottom: -2.5%;
  }
  .biography {
    padding: 30px 0;
    margin-top: 0;
    font-size: 50px;
  }
  #robin {
    font-size: 30px;
  }
  #circle {
    width: 500px;
    height: 500px;
    border-radius: 50%;
    float: left;
    margin-top: 9%;
  }
  #video {
    position: relative;
    display: flex;
    justify-content: center;
    padding-bottom: 10%;
    margin-top: -5%;
    margin-left: -12%;
  }
  div iframe {
    width: 40%;
    margin-left: 25%;
  }
  #video-text {
    font-size: 35px;
  }

  .social-networks {
    font-size: 25px;
  }
  #early-work {
    font-size: 40px;
    text-decoration: solid 1px #4a4a4a;
    margin-top: -4%;
  }
  #summary {
    font-size: 35px;
  }
  #chronological {
    font-size: 35px;
  }
  #list lh {
    font-size: 35px;
  }
  #hero-image {
    display: flex;
    margin: 0;
    width: auto;
    height: auto;
  }
  .book-club {
    display: flex;
    margin: 0;
    width: auto;
    height: 1200px;
  }
  #castle {
    display: flex;
    margin: 0;
    width: auto;
    height: 1200px;
  }
  form > p {
    font-size: 25px;
  }
  form > h2 {
    font-size: 40px;
  }
  #enter {
    font-size: 50px;
  }
  .email {
    font-size: 40px;
  }
  #email-field {
    height: 40px;
    width: 12%;
    border: solid 2px #719b43;
    align-items: center;
  }
  .meetup-times {
    border-radius: 2px;
    box-sizing: border-box;
    color: gray;
    padding-bottom: 5px;
    padding-top: 5px;
    font-size: 40px;
    width: 40%;
    text-align: center;
    margin-left: 30%;
  }
  .map {
    position: absolute;
    height: 0;
    left: 3%;
    padding-bottom: 40%;
  }
}
/* ... */

